--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Styled HTML Block</title>
+    <style>
+        .main {
+            width: 200px;
+            background-color: purple;
+            border-left: 5px solid green;
+            padding: 10px;
+        }
+        #heading {
+            font-size: 20px;
+            color: white;
+            text-decoration: underline;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="main">
+        <h1 id="heading">This is a Heading</h1>
+    </div>
 </body>
-
 </html>
